# venturi

./: .gitignore  AppImageBuilder.yml  Cargo.toml  README.md  mise.toml
.github/workflows/: appimage.yml  build.yml  flatpak.yml  unit-tests.yml
crates/app-gtk/: Cargo.toml
crates/application/: Cargo.toml
crates/domain/: Cargo.toml
crates/runtime/: Cargo.toml
data/: org.venturi.Venturi.metainfo.xml  venturi.desktop
docs/architecture/: core-runtime.md
flatpak/: org.venturi.Venturi.json
scripts/: install-desktop.sh
src/: app.rs  lib.rs  main.rs  tray.rs
src/audio/: mod.rs  noise_gate.rs  soundboard.rs
src/categorizer/: learning.rs  mod.rs  rules.rs
src/config/: persistence.rs  schema.rs
src/core/: command_coalescing.rs  device_routing.rs  hotkeys.rs  messages.rs  meter.rs  meter_worker.rs  mod.rs  pipewire_backend.rs  pipewire_channel_control.rs  pipewire_discovery.rs  pipewire_manager.rs  pw_monitor.rs  router.rs  snapshot_ops.rs  soundboard_playback.rs  state_persistence.rs  stream_routing.rs  virtual_devices.rs  volume.rs
src/gui/: app_chip.rs  channel_strip.rs  mixer_tab.rs  (+5 more)
tests/: categorizer_rules.rs  config_persistence.rs  core_thread_contract.rs  dnd_payload.rs  error_recovery_reducer.rs  hotkey_resolution.rs  icon_packaging_metadata.rs  messages_roundtrip.rs  noise_gate.rs  parity_meter_soundboard.rs  parity_routing_devices.rs  parity_tray_hotkeys.rs  router_decisions.rs  settings_hotkeys_persistence.rs  smoke_cli.rs  soundboard_mixer.rs  startup_modes.rs  tray_integration.rs  virtual_device_plan.rs  volume_math.rs  workspace_smoke.rs
(+41 files in other folders)
